# cabotage-lens

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  README.pypi.md  README_new.md  pyproject.toml  requirements.txt  run_streamlit.ps1
.streamlit/: example_secrets.toml  secrets.toml.example
app/: EcoFreight_Brazil.py  __init__.py  access.py  app_streamlit.py
apps/: app_gui.py  app_streamlit.py
calcs/: backfill_normalized_schema.py  build_antaq_cabotage_voyages.ps1  build_city_dests_over350k.py  build_distance_matrix.py  count_lines.py  enrich_antaq_cabotage_voyages_with_time.py  extract_mrv_average_efficiency_by_imo.py  migrate_normalized_cache_and_bulk.py  mrv_container_efficiency.py  ors_gate_routability.py  port_ops_params_builder.py
data/: sea_matrix.json
docs/: costa_allocation_validation.md  hoteling_model.md  methodology_audit.md  mrv_container_efficiency.md  port_ops_model.md  references.bib  references_renames.md  report_figures_tables_plan.md  supabase_postgres.md  tf.tex  tf_article_to_report_writing_plan.md  tf_assumptions_and_approximations.md  tf_data_reliability_inventory.md  tf_document_structure.md  tf_final_report_draft.md  tf_literature_audit_implementation_plan.md  tf_literature_citation_map.md  tf_result_classification_rules.md  tf_sensitivity_analysis_plan.md  tf_system_boundary.md  tf_technical_article_draft.md  tf_validation_plan.md  tf_writing_briefs.md
references/: README.md
scripts/: benchmark_bulk.py  benchmark_gustavo_excel.py  bulk_multimodal_fuel_emissions_and_costs.py  compare_bulk.py  compare_single.py  debug_port_arcs.py  enrich_sea_matrix_with_voyage_efficiency.py  materialize_antaq_voyage_tables.py  migrate_sqlite_to_supabase.py  multimodal_fuel_emissions_and_costs.py  normalize_sqlite_place_names.py  refresh_antaq_pipeline.py  run_validation_batch_001b.py  summarize_validation_portops_hoteling_rerun.py  sync_data_to_supabase_storage.py
tests/: antaq_top_destinations_report.py  cabotage_tests.ipynb  database_ops.ipynb  test_antaq_app_refresh.py  test_app_access.py  (+35 more)
(+283 files in other folders)
