# pip install -e .
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-footprint"
version = "1.5.3.3"
description = "Multimodal freight assessment of logistics cost and carbon footprint."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "psycopg[binary]",
    "pandas",
    "pydeck",
    "openpyxl",
    "CurrencyConverter",
    "pyinstaller",
    "beautifulsoup4",
    "streamlit",
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "app*"]
