# pip install -e .
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-footprint"
version = "1.7.3.14"
description = "CabotageLens multimodal freight assessment of logistics cost and carbon footprint in Brazilian freight transport."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "psycopg[binary]",
    "pandas",
    "pydeck",
    "openpyxl",
    "CurrencyConverter",
    "pyinstaller",
    "beautifulsoup4",
    "streamlit",
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "app*"]
