# Secondary package metadata; install/deploy from requirements.txt.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cabotage-lens"
version = "2.0.8.7"
description = "CabotageLens multimodal freight assessment of logistics cost and carbon footprint in Brazilian freight transport."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "psycopg[binary]",
    "pandas",
    "pydeck",
    "openpyxl",
    "CurrencyConverter",
    "pyinstaller",
    "beautifulsoup4",
    "streamlit>=1.55,<2",
    "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["modules*", "app*"]
